Clean up structure a bit

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
  @font-face {
    font-family: 'Bukhari Script';
-   src: url('BukhariScript-Regular.otf');
+   src: url('font/BukhariScript-Regular.otf');
    font-weight: normal;
    font-style: normal;
  }
