--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
  /*
  https://coolors.co/c97d60-544f50-cd5334-ffbcb5-f2e5d7
+ https://coolors.co/ac7c69-544f50-cd5334-2e282a-f4e9de
 */
 
- @page {
-   size: A4;
- }
-
- html {
+/* page size */
+/*
+html {
    background: #ddd;
  }
 
@@ -15,6 +14,25 @@ body {
    height: 29.7cm;
    margin: 0 auto;
    box-shadow: 0 0 0.5cm rgba(0,0,0,0.5);
+}
+*/
+
+/* page size end */
+
+@font-face {
+   font-family: 'Bukhari Script';
+   src: url('font/BukhariScript-Regular.otf');
+   font-weight: normal;
+   font-style: normal;
+ }
+
+
+@page {
+   size: A4;
+ }
+
+html, body {
+  height: 100%;
 }
 
 html, body,
@@ -27,16 +45,9 @@ main p {
  }
 
 body {
-   font: 14px "Open Sans";
+   font: 14px "Open Sans", sans-serif;
    background: #f4e9de;
    display: flex;
- }
-
- @font-face {
-   font-family: 'Bukhari Script';
-   src: url('font/BukhariScript-Regular.otf');
-   font-weight: normal;
-   font-style: normal;
  }
 
  h1, h2 {
@@ -44,12 +55,23 @@ body {
    font-weight: normal;
  }
 
- h3 {
+ h2 {
    color: #cd5334;
-   font-weight: normal;
+   text-align: center;
+   border-bottom: 1px solid #cd5334;
+   font-size: 30px;
+   margin-bottom: 10px;
+   margin-top: 0;
+}
+
+h3 {
+   font-weight: bold;
    margin: 0;
-   font-size: 16px;
- }
+   font-size: 14px;
+}
+h3 a {
+  color: inherit;
+}
 
  .sidebar {
    background: #2e282a;
@@ -99,7 +121,7 @@ body {
  }
 
  .sidebar p {
-   color: #544f50;
+   color: #AC7C69;
    text-align: justify;
  }
 
@@ -115,23 +137,27 @@ body {
  }
 
  .sidebar .interests {
-   margin-top: 30px;
    display: flex;
    flex-wrap: wrap;
    padding: 0;
+   width: 100%;
+   margin: 30px 0 0 15px;
  }
 
  .sidebar .interests li {
    display: inline-block;
    text-align: center;
-   margin: 20px;
+   margin: 15px;
    width: 60px;
-   color: #544f50;
+   color: #AC7C69;
  }
 
- .sidebar .interests li:before {
+ .sidebar .interests i {
    display: block;
    color: #cd5334;
+   font-size: 20px;
+   text-align: center;
+   width: 100%;
  }
 
  main {
@@ -144,3 +170,38 @@ body {
  main .details {
    font-size: 10px;
  }
+
+section > header {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  grid:
+    "title year"
+    "extra extra" / auto 1fr;
+  margin-top: 10px;
+}
+
+section > header h3 {
+  grid-area: title;
+}
+
+section > header ul {
+  grid-area: extra;
+  margin: 0;
+  padding-left: 20px;
+}
+
+.year {
+  color: #544f50;
+  grid-area: year;
+  text-align: right;
+}
+
+section section {
+  margin: 15px 10px;
+}
+
+ul {
+  margin: 0;
+}
+
+
